--- a/color palette.scss
+++ b/color palette.scss
@@ -16,3 +16,40 @@ $green: #00a85f;
 $light-blue: #53b7e8;
 $dark-blue: #043776;
 $carbon: #707073;
+
+$colors: (
+  "red": $red,
+  "dark-red": $dark-red,
+  "yellow": $yellow,
+  "orange": $orange,
+  "green-light": $light-green,
+  "green": $green,
+  "blue-light": $light-blue,
+  "blue-dark": $dark-blue,
+  "carbon": $carbon,
+  "white": $white,
+  "gray-light": $gray-100,
+  "gray": $gray-200,
+  "chrome": $gray-300,
+  "platinum": $gray-400,
+  "gray-mid": $gray-500,
+  "gray-dark": $gray-600,
+);
+
+$grays: (
+  "100": $gray-100,
+  "200": $gray-200,
+  "300": $gray-300,
+  "400": $gray-400,
+  "500": $gray-500,
+  "600": $gray-600,
+);
+
+$primary: $red;
+
+$theme-colors: (
+  "primary": $primary,
+  "dark": $gray-600,
+  "light": $white,
+  "black": $black,
+);
