--- a/color palette.scss
+++ b/color palette.scss
@@ -1,3 +1,5 @@
+
+/** IMPORTANT: DO NOT Change the variable names **/
 $white: #fff;
 $gray-100: #eee;
 $gray-200: #ddd;
@@ -17,6 +19,8 @@ $light-blue: #53b7e8;
 $dark-blue: #043776;
 $carbon: #707073;
 
+
+/** DO NOT Change the variable names **/
 $colors: (
   "red": $red,
   "dark-red": $dark-red,
