--- a/color palette.scss
+++ b/color palette.scss
@@ -1,5 +1,5 @@
 
-/** IMPORTANT: DO NOT Change the variable names **/
+/** IMPORTANT: DO NOT Change the variable names. i.e don't change anything on the left hand side, anyting before ':' **/
 $white: #fff;
 $gray-100: #eee;
 $gray-200: #ddd;
@@ -20,7 +20,7 @@ $dark-blue: #043776;
 $carbon: #707073;
 
 
-/** DO NOT Change the variable names **/
+/** -------- DO NOT Change anything beyond this line ------ this is just for reference **/
 $colors: (
   "red": $red,
   "dark-red": $dark-red,
